--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
         <!-- About section -->
         <article id="about">
           <h2>About</h2>
-          <section>
-            <h3>Hi! I'm Pete Thinkful</h3>
-            <div>
-              <img
-                class="image-circle"
-                src="images/pete-thinkful.png"
-                alt="Pete Thinkful"
-              />
-            </div>
-            <p>I'm an artist living in Denver, Colorado.</p>
-            <p>As an artist, I'm interested in:</p>
-            <ul>
+          <section class="profile">
+          <div>
+            <img
+              class="image-circle"
+              src="images/pete-thinkful.png"
+              alt="Pete Thinkful"
+            />
+          </div>
+            <h3 class="description">Hi! I'm Pete Thinkful</h3>
+            <p class="description">I'm an artist living in Denver, Colorado.</p>
+            <p class="description">As an artist, I'm interested in:</p>
+            <ul class="description">
               <li>Producing abstract art</li>
               <li>Creating street graffiti art</li>
               <li>Connecting with like-minded artists</li>
             </ul>
-            <p>
+            <p class="description">
               Please feel free to take a look at my website and feel free to
               <a href="#contact">contact me</a>.
-            </p>
+            <
           </section>
 
           <section>
@@ -67,8 +67,8 @@
         <hr />
 
         <!-- Portfolio section -->
-        <article id="portfolio">
-          <h2>Portfolio</h2>
+        <h2>Portfolio</h2>
+        <article class="art" id="portfolio">
           <section>
             <h3>Abstract Red</h3>
             <div>
