--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
               alt="Pete Thinkful"
             />
           </div>
-            <h3 class="description">Hi! I'm Pete Thinkful</h3>
+          <div>
+            <h3>Hi! I'm Pete Thinkful</h3>
             <p class="description">I'm an artist living in Denver, Colorado.</p>
             <p class="description">As an artist, I'm interested in:</p>
             <ul class="description">
@@ -45,8 +46,8 @@
             </ul>
             <p class="description">
               Please feel free to take a look at my website and feel free to
-              <a href="#contact">contact me</a>.
-            <
+              <a href="#contact">contact me</a>. </p>
+          </div>
           </section>
 
           <section>
